--- a/pos.properties
+++ b/pos.properties
@@ -1,6 +1,6 @@
 app.version=1.0
-app.name=Employee Application
-app.baseUrl=/employee
+app.name=POS Application
+app.baseUrl=/
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/pos-app
