--- a/pos.properties
+++ b/pos.properties
@@ -1,6 +1,6 @@
 app.version=1.0
 app.name=POS Application
-app.baseUrl=/
+app.baseUrl=http://localhost:8080
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/pos-app
