--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,20 @@
             <scope>provided</scope>
         </dependency>
 
+        <!--        file Upload-->
+        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
 
         <!-- Provided -->
         <dependency>
