[update/feature] - added signup functionalty, filters in brand and product master, bug fixed in upload, ui fixes in each page, refractoring backend

--- a/pos.properties
+++ b/pos.properties
@@ -1,6 +1,7 @@
 app.version=1.0
 app.name=POS Application
 app.baseUrl=http://localhost:8080
+app.supervisorEmail="test123@test.com"
 
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost/pos-app
